[Layout] Fixed bug of text-overflow

--- a/client/scss/project/blocks/task-item.scss
+++ b/client/scss/project/blocks/task-item.scss
@@ -38,6 +38,7 @@
 .task-item {
   position: relative;
   display: table;
+  table-layout:fixed;
   line-height: normal;
   border-bottom: 0;
 
